--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,9 +24,10 @@ jobs:
       - name: Build Docusaurus
         run: npm run build
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
-          # publish_branch: gh-pages  # デフォルトで gh-pages ブランチにデプロイ
+      - name: Commit and push built files to main branch
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add build
+          git commit -m "Deploy Docusaurus site to GitHub Pages"
+          git push origin main
