--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,6 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add build
+          git add -f build  # -f オプションを使用
           git commit -m "Deploy Docusaurus site to GitHub Pages"
           git push origin main
