--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,9 +6,10 @@ on:
       - main  # メインブランチが更新されたらデプロイ
 
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
+
 
 jobs:
   build:
